# OpenGL

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
apps/: CMakeLists.txt
apps/01_getting_started/: CMakeLists.txt
apps/01_getting_started/01_hello_window/: CMakeLists.txt  main.cpp
apps/01_getting_started/02_hello_triangle/: CMakeLists.txt  main.cpp
apps/01_getting_started/03_shaders/: CMakeLists.txt  main.cpp
apps/01_getting_started/04_textures/: CMakeLists.txt  main.cpp
apps/01_getting_started/05_transformations/: CMakeLists.txt  main.cpp
apps/01_getting_started/06_coordinate_systems/: CMakeLists.txt  main.cpp
apps/01_getting_started/07_camera/: CMakeLists.txt  main.cpp
apps/02_lighting/: CMakeLists.txt
apps/02_lighting/01_colors/: CMakeLists.txt  main.cpp
apps/02_lighting/02_basic_lighting/: CMakeLists.txt  main.cpp
apps/02_lighting/03_materials/: CMakeLists.txt  main.cpp
assets/textures/: checker.ppm
cmake/: OpenGLLabOptions.cmake
conan/profiles/: clang-cl  clang-cl-ninja-multi  mingw-clang  mingw-gcc  msvc-ninja  msvc-ninja-multi  msvc-vs2026
docs/: build.md
